[package]
name = "freed"
version = "0.1.0"
edition = "2021"
authors = [ "Nelu Snegur <nelu@pulsarplanet.com>" ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nelusnegur/freed"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
mongodb = { version = "3.1.0", features = [ "rustls-tls", "dns-resolver" ] }
tokio = "1.41.0"
